[project]
name = "mhc-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appnope==0.1.4",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "comm==0.2.2",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "datasets>=2.14.4",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "einops>=0.8.1",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "filelock==3.18.0",
    "fonttools==4.55.8",
    "fsspec==2025.3.2",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.0.0",
    "ipykernel==6.29.5",
    "ipython==8.18.1",
    "jaxtyping>=0.2.36",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "kiwisolver==1.4.7",
    "markupsafe==3.0.2",
    "matplotlib==3.9.4",
    "matplotlib-inline==0.1.7",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.50",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==19.0.0",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "pytest==8.3.4",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyzmq==26.2.1",
    "scikit-learn>=1.6.1",
    "seaborn==0.13.2",
    "six==1.17.0",
    "slurm-pool",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tomli==2.2.1",
    "torch==2.6.0",
    "tornado==6.4.2",
    "tqdm>=4.67.1",
    "traitlets==5.14.3",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "wandb>=0.19.9",
    "wcwidth==0.2.13",
    "zipp==3.21.0",
]

[tool.uv.sources]
slurm-pool = { git = "https://github.com/NarayanSchuetz/SlurmMultiNodePool.git", rev = "74289c84fbea6dfce62376272b66cf5ff044278d" }

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pip>=25.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
